appId: ${MAESTRO_APP_ID}
---
# Purpose: Test the creation and deletion of a DM room.
- tapOn: "Create room"
- tapOn: "Search for someone"
- inputText: ${MAESTRO_INVITEE1_MXID}
- tapOn:
    text: ${MAESTRO_INVITEE1_MXID}
    index: 1
- runFlow:
    when:
      visible: 'Start a chat with this new contact?'
    commands:
      - tapOn: 'Continue'
- runFlow:
    when:
      visible: 'Send invite?'
    commands:
      - tapOn: 'Send invite'
- takeScreenshot: build/maestro/330-createAndDeleteDM
- extendedWaitUntil:
    visible:
      id: 'timeline'
    timeout: 60000
- tapOn: "maestroelement2"
- scroll
- tapOn: "Leave room"
- tapOn: "Leave"
- runFlow:
    when:
      visible: 'You need an invite in order to join'
    commands:
      - tapOn: "Back"
