appId: ${MAESTRO_APP_ID}
---
# Purpose: Test the creation and deletion of a room
- tapOn: "Create room"
- tapOn: "New room"
- tapOn: "Add name…"
- inputText: "aRoomName"
- tapOn: "Add description…"
- inputText: "aRoomTopic"
- tapOn: "Create"

# It can take ages to create room on matrix.org
- extendedWaitUntil:
    timeout: 30000
    visible: "Invite people"

- takeScreenshot: build/maestro/320-createAndDeleteRoom
- tapOn: "Search for someone"
- inputText: ${MAESTRO_INVITEE1_MXID}
- tapOn:
    text: ${MAESTRO_INVITEE1_MXID}
    index: 1
- tapOn: "Finish"
- runFlow:
    when:
      visible: 'Invite new contact to this room?'
    commands:
      - tapOn:
          id: "confirm_invite_unknown"
- tapOn: "aRoomName"
- tapOn: "Invite"
# assert there's 1 member and 1 invitee
- tapOn: "Search for someone"
- inputText: ${MAESTRO_INVITEE2_MXID}
- tapOn:
    text: ${MAESTRO_INVITEE2_MXID}
    index: 1
# Hide keyboard by tapping on an external element in case it's displayed, otherwise it will 'eat' the back button press
- tapOn:
    # Navigation title
    text: "Invite people"
- tapOn: "Invite"
- runFlow:
    when:
      visible: 'Invite new contact to this room?'
    commands:
      - tapOn:
          id: "confirm_invite_unknown"
- scrollUntilVisible:
    direction: DOWN
    element:
      text: "People"
- tapOn: "People"
# assert there's 1 member and 2 invitees
- tapOn: "Back"
- scroll
- scroll
- tapOn: "Leave room"
- tapOn: "Leave"
- runFlow:
    when:
      visible: 'You need an invite in order to join'
    commands:
      - tapOn: "Back"
