appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible: 'Start a call'
    commands:
      - tapOn: "Start a call"
- runFlow:
    when:
      visible: 'Join'
    commands:
      - tapOn: "Join"
- takeScreenshot: build/maestro/700-Call
- extendedWaitUntil:
    visible: "maestroelement"
    timeout: 10000
- takeScreenshot: build/maestro/710-Call
# Hangup
- tapOn: "End call"
# Repeat hang up in case it helps
- runFlow:
    when:
      visible: 'End call'
    commands:
      - tapOn: "End call"
- extendedWaitUntil:
    visible: "MyRoom"
    timeout: 10000
